all templates commented

--- a/WAD/templates/ToP/add_song.html
+++ b/WAD/templates/ToP/add_song.html
@@ -1,5 +1,6 @@
 {% extends 'ToP/base.html' %}
-
+<!--> Template for a user to add a song to their created playlist, with fields including Song Name,
+Album Name, Artist Name and Genre. </!-->
 {% block title %}
     Add a Song
 {% endblock %}
