--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -1,5 +1,6 @@
 {% extends "ToP/base.html" %}
-
+<!-->Home page template. If user is unregistered, 'Register Here!' displayed to prompt user to create
+an account. If user is logged in, home page informs them of this. </!-->
 
 {% block title %}
 	Home
