--- a/WAD/templates/ToP/most_viewed.html
+++ b/WAD/templates/ToP/most_viewed.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!--> Displays the most viewed playlists in the database, according to page views for each playlist. </!-->
 {% load staticfiles %}
 
 {% block title %}
