--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -1,4 +1,6 @@
 {% extends 'ToP/base.html' %}
+<!--> Template to display a playlist. Playlist art is displayed, along with the name and the songs included. Each song is 
+displayed with the artist's image and album artwork from Spotify. </!-->
 {% load staticfiles %}
 
 {% block title %}
