--- a/WAD/templates/ToP/top_rated.html
+++ b/WAD/templates/ToP/top_rated.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!--> Displays the 40 top rated playlists in the database, according to ratings left by logged-in users. </!-->
 {% load staticfiles %}
 
 {% block title %}
