--- a/WAD/templates/registration/logout.html
+++ b/WAD/templates/registration/logout.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!--> Informs user they have been logged out. </!-->
 {% block body %}
 	<h1>Logged Out</h1>
 	<p class="lead">You are now logged out</p>
