--- a/WAD/templates/registration/password_change_done.html
+++ b/WAD/templates/registration/password_change_done.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!--> Informs user their password change has been successful. </!-->
 {% load i18n %}
 
 {% block body %}
