--- a/WAD/templates/registration/password_reset_confirm.html
+++ b/WAD/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!--> Allows user to reset password according to requirements. Prompts re-entry for verification. </!-->
 {% load i18n %}
 
 {% block body %}
