--- a/WAD/templates/registration/password_reset_done.html
+++ b/WAD/templates/registration/password_reset_done.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!--> Informs user that password reset email has been sent. </!-->
 {% load i18n %}
 
 {% block body %}
