--- a/WAD/templates/registration/password_reset_form.html
+++ b/WAD/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!--> Form to allow user to begin process to reset password</!-->
 {% load i18n %}
 
 {% block body %}
