--- a/WAD/templates/registration/registration_form.html
+++ b/WAD/templates/registration/registration_form.html
@@ -1,4 +1,6 @@
 {% extends 'ToP/base.html' %}
+<!--> Form to allow user to create an account. Required fields include username, email and password.
+Password re-entry is prompted for verification. </!-->
 {% block title %}
 	Register
 {% endblock %}
