--- a/WAD/templates/ToP/create_playlist.html
+++ b/WAD/templates/ToP/create_playlist.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!--> Template to allow user to create a playlist using post form. </!-->
 {% load staticfiles %}
 
 {% block title %}
