--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!--> Displays all of the logged in user's playlists. Also acts as an Account page, allowing the user to change their password. </!-->
 {% load staticfiles %}
 
 {% block title %}
