--- a/WAD/templates/ToP/view_all_playlists.html
+++ b/WAD/templates/ToP/view_all_playlists.html
@@ -1,4 +1,6 @@
 {% extends 'ToP/base.html' %}
+<!--> Displays a list of all created playlists in the database, along with either the
+default cover art or the user-uploaded cover image. The playlist author is also displayed. </!-->
 {% load staticfiles %}
 
 {% block title %}
