--- a/WAD/templates/registration/password_change_form.html
+++ b/WAD/templates/registration/password_change_form.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!--> Form to allow user to change password according to requirements. Prompts re-entry for verification. </!-->
 {% load i18n %}
 
 {% block body %}
