--- a/WAD/templates/registration/password_reset_complete.html
+++ b/WAD/templates/registration/password_reset_complete.html
@@ -1,4 +1,5 @@
 {% extends "ToP/base.html" %}
+<!-- Informs user their password reset has been successful. </!-->
 {% load i18n %}
 
 {% block body %}
