--- a/WAD/templates/registration/password_reset_email.html
+++ b/WAD/templates/registration/password_reset_email.html
@@ -1,5 +1,6 @@
 {% autoescape off %}
-To initiate the password reset process for your {{user.get_username }} TestSite Account,
+<!--> Password reset email contents</!-->
+To initiate the password reset process for your {{user.get_username }} Top of the Playlists Account,
 click the link below:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
@@ -8,5 +9,5 @@ If clicking the link above doesn't work, please copy and paste the URL in a new 
 window instead.
 
 Sincerely,
-The TestSite Team
+The Top of the Playlists Team
 {% endautoescape %}
