--- a/WAD/templates/registration/registration_complete.html
+++ b/WAD/templates/registration/registration_complete.html
@@ -1,4 +1,5 @@
 {% extends 'ToP/base.html' %}
+<!-->Informs user their account creation has been successful. </!-->
 {% block body %}
 	<h1>Registration Complete</h1>
 	<p class="lead">You are now registered</p>
