--- a/WAD/templates/registration/password_change_form.html
+++ b/WAD/templates/registration/password_change_form.html
@@ -5,32 +5,28 @@
 {% block body %}
 	<form role="form" method="post" action=".">
 		{% csrf_token %}
+		<br/>
+		<br/>
 		<div class="from-group">
 		<p class="lead">
-			<input class="form-control" id="id_old_password" name="old_password" label="Old password" type="password" placeholder="Old Password" required autofocus/>
+			<input class="form-control" id="id_old_password" name="old_password" label="Old password" type="password" placeholder="Old Password">
 		</p>
-		<p class="lead">
-			<input class="form-control" id="id_new_password1" name="new_password1" label="New Password" type="password" placeholder="New Password" required autofocus/>
-		</p>
+		<p class="lead" align="left">
+			<input class="form-control" id="id_new_password1" name="new_password1" label="New Password" type="password" placeholder="New Password">
 		<span class="helptext" align="left">
-		<p class = "lead">
 		Your password can't be too similar to your other personal information.<br/>
 		Your password must contain at least 8 characters.<br/>
 		Your password can't be a commonly used password.<br/>
 		Your password can't be entirely numeric.
 		</p>
 		</span>
-		<p class="lead">
-			<input class="form-control" id="id_new_password2" name="new_password2" label="New Password Confirmation" type="password" placeholder="New Password Confirmation" required autofocus/>
-		</p>
+		<p class="lead" align="left">
+			<input class="form-control" id="id_new_password2" name="new_password2" label="New Password Confirmation" type="password" placeholder="New Password Confirmation"/>
 		<span class="helptext" align="left">
-		<p class="lead">
 			Enter the same password as before for verification.
 		</p>
 		</span>
-		</p>
 		</div>
-		<br/>
 		<button type="submit" class="btn btn-secondary">Submit</button>
 	</form>
 {% endblock %}
